animation on page up n runnning , bug[size is too big and audio is not working]

--- a/popup.css
+++ b/popup.css
@@ -11,5 +11,5 @@ body {
   justify-content: center;
   height: 100vh;
   width: 320px;
-  background-color: #f0f0f0;
+  background-color: cyan;
 }
